# sql-gateway-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  demo.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/application/controllers/http/gateway/: gateway_http_controller.py  query_allowed_response.py  query_database_error_response.py  query_rejected_response.py  query_request.py  query_result_payload.py
src/application/controllers/http/observability/: observability_http_controller.py
src/application/controllers/http/probes/: health_response.py  probes_http_controller.py  readiness_response.py
src/application/use_cases/: check_readiness_use_case.py  execute_query_use_case.py
src/core/model/: access_guard.py  decision_enum.py  query_payload.py
src/core/ports/inbound/: check_readiness_port.py  execute_query_port.py  execute_query_result_dto.py  readiness_report_dto.py
src/core/ports/outbound/: observability_entry_dto.py  observability_recorder.py  query_executor.py  query_outcome_dto.py  query_scrubber.py  query_validator.py  validation_result_dto.py
src/infrastructure/config/: settings.py
src/infrastructure/observability/: in_memory_observability_recorder_adapter.py  jsonl_file_observability_recorder_adapter.py  multi_sink_observability_recorder_adapter.py  stdout_observability_recorder_adapter.py
src/infrastructure/persistence/postgres/: init.sql  query_executor_adapter.py  query_scrubber_adapter.py  query_validator_adapter.py
src/infrastructure/persistence/postgres/rules/: allowed_root_statement_rule.py  bounded_write_rule.py  no_dangerous_functions_rule.py  no_data_modifying_cte_rule.py  no_forbidden_constructs_rule.py  no_select_into_rule.py
src/infrastructure/persistence/sql/: query_scrubber_adapter.py  query_validator.py  rule_registry.py
src/sql_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_main_smoke.py
tests/application/controllers/http/: conftest.py
tests/application/controllers/http/gateway/: test_controller.py
tests/application/controllers/http/observability/: test_controller.py
tests/application/controllers/http/probes/: test_controller.py
tests/application/use_cases/: test_execute_query.py
tests/core/ports/outbound/: test_observability_entry_dto.py
tests/infrastructure/observability/: test_in_memory_observability_recorder_adapter.py  test_jsonl_file_observability_recorder_adapter.py  test_multi_sink_observability_recorder_adapter.py  test_stdout_observability_recorder_adapter.py
tests/infrastructure/persistence/postgres/: test_query_validator_adapter.py
tests/infrastructure/persistence/sql/: test_query_scrubber_adapter.py
tests/integration/: conftest.py  test_db_permissions.py
